examples/test/testpolicy19018.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19018
  namespace: namespace188
spec:
  podSelector:
    matchLabels:
      key13: value4
      key3: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value15
          key27: value2
      podSelector:
        matchLabels:
          key2: value1
          key33: value17
